# hime

./: CMakeLists.txt  all_valid_6_letter_passwords_by_82_is_value_6_world_and_a8_is_1_so_player_1_and_all_others_value_1.txt  all_valid_6_letter_passwords_by_82_is_value_6_world_and_a8_is_1_so_player_1_and_all_others_zero.txt  hime.cpp  hime.h  hlrotate.h  readme.md  test_hime.cpp  test_rotate.cpp
